src/lib/adrparser.js
// @generated by Peggy 5.0.6.
//
// https://peggyjs.org/

class peg$SyntaxError extends SyntaxError {
	constructor(message, expected, found, location) {
		super(message);
		this.expected = expected;
		this.found = found;
		this.location = location;
		this.name = 'SyntaxError';
	}

	format(sources) {
		let str = 'Error: ' + this.message;
		if (this.location) {
			let src = null;
			const st = sources.find((s) => s.source === this.location.source);
			if (st) {
				src = st.text.split(/\r\n|\n|\r/g);
			}
			const s = this.location.start;
			const offset_s =
				this.location.source && typeof this.location.source.offset === 'function'
					? this.location.source.offset(s)
					: s;
			const loc = this.location.source + ':' + offset_s.line + ':' + offset_s.column;
			if (src) {
				const e = this.location.end;
				const filler = ''.padEnd(offset_s.line.toString().length, ' ');
				const line = src[s.line - 1];
				const last = s.line === e.line ? e.column : line.length + 1;
				const hatLen = last - s.column || 1;
				str +=
					'\n --> ' +
					loc +
					'\n' +
					filler +
					' |\n' +
					offset_s.line +
					' | ' +
					line +
					'\n' +
					filler +
					' | ' +
					''.padEnd(s.column - 1, ' ') +
					''.padEnd(hatLen, '^');
			} else {
				str += '\n at ' + loc;
			}
		}
		return str;
	}

	static buildMessage(expected, found) {
		function hex(ch) {
			return ch.codePointAt(0).toString(16).toUpperCase();
		}

		const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, 'unicode')
			? new RegExp('[\\p{C}\\p{Mn}\\p{Mc}]', 'gu')
			: null;
		function unicodeEscape(s) {
			if (nonPrintable) {
				return s.replace(nonPrintable, (ch) => '\\u{' + hex(ch) + '}');
			}
			return s;
		}

		function literalEscape(s) {
			return unicodeEscape(
				s
					.replace(/\\/g, '\\\\')
					.replace(/"/g, '\\"')
					.replace(/\0/g, '\\0')
					.replace(/\t/g, '\\t')
					.replace(/\n/g, '\\n')
					.replace(/\r/g, '\\r')
					.replace(/[\x00-\x0F]/g, (ch) => '\\x0' + hex(ch))
					.replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => '\\x' + hex(ch))
			);
		}

		function classEscape(s) {
			return unicodeEscape(
				s
					.replace(/\\/g, '\\\\')
					.replace(/\]/g, '\\]')
					.replace(/\^/g, '\\^')
					.replace(/-/g, '\\-')
					.replace(/\0/g, '\\0')
					.replace(/\t/g, '\\t')
					.replace(/\n/g, '\\n')
					.replace(/\r/g, '\\r')
					.replace(/[\x00-\x0F]/g, (ch) => '\\x0' + hex(ch))
					.replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => '\\x' + hex(ch))
			);
		}

		const DESCRIBE_EXPECTATION_FNS = {
			literal(expectation) {
				return '"' + literalEscape(expectation.text) + '"';
			},

			class(expectation) {
				const escapedParts = expectation.parts.map((part) =>
					Array.isArray(part)
						? classEscape(part[0]) + '-' + classEscape(part[1])
						: classEscape(part)
				);

				return (
					'[' +
					(expectation.inverted ? '^' : '') +
					escapedParts.join('') +
					']' +
					(expectation.unicode ? 'u' : '')
				);
			},

			any() {
				return 'any character';
			},

			end() {
				return 'end of input';
			},

			other(expectation) {
				return expectation.description;
			}
		};

		function describeExpectation(expectation) {
			return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
		}

		function describeExpected(expected) {
			const descriptions = expected.map(describeExpectation);
			descriptions.sort();

			if (descriptions.length > 0) {
				let j = 1;
				for (let i = 1; i < descriptions.length; i++) {
					if (descriptions[i - 1] !== descriptions[i]) {
						descriptions[j] = descriptions[i];
						j++;
					}
				}
				descriptions.length = j;
			}

			switch (descriptions.length) {
				case 1:
					return descriptions[0];

				case 2:
					return descriptions[0] + ' or ' + descriptions[1];

				default:
					return (
						descriptions.slice(0, -1).join(', ') + ', or ' + descriptions[descriptions.length - 1]
					);
			}
		}

		function describeFound(found) {
			return found ? '"' + literalEscape(found) + '"' : 'end of input';
		}

		return 'Expected ' + describeExpected(expected) + ' but ' + describeFound(found) + ' found.';
	}
}

function peg$parse(input, options) {
	options = options !== undefined ? options : {};

	const peg$FAILED = {};
	const peg$source = options.grammarSource;

	const peg$startRuleFunctions = {
		start: peg$parsestart
	};
	let peg$startRuleFunction = peg$parsestart;

	const peg$c0 = 'x';
	const peg$c1 = '0';
	const peg$c2 = '1';
	const peg$c3 = '2';
	const peg$c4 = '3';
	const peg$c5 = '4';
	const peg$c6 = '5';
	const peg$c7 = '6';
	const peg$c8 = '7';
	const peg$c9 = '8';
	const peg$c10 = '9';

	const peg$r0 = /^[0-9]/;

	const peg$e0 = peg$literalExpectation('x', true);
	const peg$e1 = peg$classExpectation([['0', '9']], false, false, false);
	const peg$e2 = peg$literalExpectation('0', false);
	const peg$e3 = peg$literalExpectation('1', false);
	const peg$e4 = peg$literalExpectation('2', false);
	const peg$e5 = peg$literalExpectation('3', false);
	const peg$e6 = peg$literalExpectation('4', false);
	const peg$e7 = peg$literalExpectation('5', false);
	const peg$e8 = peg$literalExpectation('6', false);
	const peg$e9 = peg$literalExpectation('7', false);
	const peg$e10 = peg$literalExpectation('8', false);
	const peg$e11 = peg$literalExpectation('9', false);

	function peg$f0() {
		return { extra: true };
	}
	function peg$f1() {
		return { extra: false };
	}
	function peg$f2(a) {
		return { double: true, val: a.at(0) };
	}
	function peg$f3(a) {
		return { double: true, val: a.at(0) };
	}
	function peg$f4(a) {
		return { double: true, val: a.at(0) };
	}
	function peg$f5(a) {
		return { double: true, val: a.at(0) };
	}
	function peg$f6(a) {
		return { double: true, val: a.at(0) };
	}
	function peg$f7(a) {
		return { double: true, val: a.at(0) };
	}
	function peg$f8(a) {
		return { double: true, val: a.at(0) };
	}
	function peg$f9(a) {
		return { double: true, val: a.at(0) };
	}
	function peg$f10(a) {
		return { double: true, val: a.at(0) };
	}
	function peg$f11(a) {
		return { double: true, val: a.at(0) };
	}
	function peg$f12(a, b) {
		return { primary: a, secondary: b };
	}
	function peg$f13(a, b) {
		return { primary: { double: false, val: a }, secondary: b };
	}
	let peg$currPos = options.peg$currPos | 0;
	let peg$savedPos = peg$currPos;
	const peg$posDetailsCache = [{ line: 1, column: 1 }];
	let peg$maxFailPos = peg$currPos;
	let peg$maxFailExpected = options.peg$maxFailExpected || [];
	let peg$silentFails = options.peg$silentFails | 0;

	let peg$result;

	if (options.startRule) {
		if (!(options.startRule in peg$startRuleFunctions)) {
			throw new Error('Can\'t start parsing from rule "' + options.startRule + '".');
		}

		peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
	}

	function text() {
		return input.substring(peg$savedPos, peg$currPos);
	}

	function offset() {
		return peg$savedPos;
	}

	function range() {
		return {
			source: peg$source,
			start: peg$savedPos,
			end: peg$currPos
		};
	}

	function location() {
		return peg$computeLocation(peg$savedPos, peg$currPos);
	}

	function expected(description, location) {
		location = location !== undefined ? location : peg$computeLocation(peg$savedPos, peg$currPos);

		throw peg$buildStructuredError(
			[peg$otherExpectation(description)],
			input.substring(peg$savedPos, peg$currPos),
			location
		);
	}

	function error(message, location) {
		location = location !== undefined ? location : peg$computeLocation(peg$savedPos, peg$currPos);

		throw peg$buildSimpleError(message, location);
	}

	function peg$getUnicode(pos = peg$currPos) {
		const cp = input.codePointAt(pos);
		if (cp === undefined) {
			return '';
		}
		return String.fromCodePoint(cp);
	}

	function peg$literalExpectation(text, ignoreCase) {
		return { type: 'literal', text, ignoreCase };
	}

	function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
		return { type: 'class', parts, inverted, ignoreCase, unicode };
	}

	function peg$anyExpectation() {
		return { type: 'any' };
	}

	function peg$endExpectation() {
		return { type: 'end' };
	}

	function peg$otherExpectation(description) {
		return { type: 'other', description };
	}

	function peg$computePosDetails(pos) {
		let details = peg$posDetailsCache[pos];
		let p;

		if (details) {
			return details;
		} else {
			if (pos >= peg$posDetailsCache.length) {
				p = peg$posDetailsCache.length - 1;
			} else {
				p = pos;
				while (!peg$posDetailsCache[--p]) {}
			}

			details = peg$posDetailsCache[p];
			details = {
				line: details.line,
				column: details.column
			};

			while (p < pos) {
				if (input.charCodeAt(p) === 10) {
					details.line++;
					details.column = 1;
				} else {
					details.column++;
				}

				p++;
			}

			peg$posDetailsCache[pos] = details;

			return details;
		}
	}

	function peg$computeLocation(startPos, endPos, offset) {
		const startPosDetails = peg$computePosDetails(startPos);
		const endPosDetails = peg$computePosDetails(endPos);

		const res = {
			source: peg$source,
			start: {
				offset: startPos,
				line: startPosDetails.line,
				column: startPosDetails.column
			},
			end: {
				offset: endPos,
				line: endPosDetails.line,
				column: endPosDetails.column
			}
		};
		if (offset && peg$source && typeof peg$source.offset === 'function') {
			res.start = peg$source.offset(res.start);
			res.end = peg$source.offset(res.end);
		}
		return res;
	}

	function peg$fail(expected) {
		if (peg$currPos < peg$maxFailPos) {
			return;
		}

		if (peg$currPos > peg$maxFailPos) {
			peg$maxFailPos = peg$currPos;
			peg$maxFailExpected = [];
		}

		peg$maxFailExpected.push(expected);
	}

	function peg$buildSimpleError(message, location) {
		return new peg$SyntaxError(message, null, null, location);
	}

	function peg$buildStructuredError(expected, found, location) {
		return new peg$SyntaxError(
			peg$SyntaxError.buildMessage(expected, found),
			expected,
			found,
			location
		);
	}

	function peg$parsestart() {
		let s0, s1, s2;

		s0 = peg$currPos;
		s1 = peg$parseCharacter();
		if (s1 !== peg$FAILED) {
			s2 = peg$parseNumbers();
			if (s2 !== peg$FAILED) {
				s1 = [s1, s2];
				s0 = s1;
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		} else {
			peg$currPos = s0;
			s0 = peg$FAILED;
		}

		return s0;
	}

	function peg$parseCharacter() {
		let s0, s1;

		s0 = peg$currPos;
		s1 = input.charAt(peg$currPos);
		if (s1.toLowerCase() === peg$c0) {
			peg$currPos++;
		} else {
			s1 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$e0);
			}
		}
		if (s1 !== peg$FAILED) {
			peg$savedPos = s0;
			s1 = peg$f0();
		}
		s0 = s1;
		if (s0 === peg$FAILED) {
			s0 = peg$currPos;
			s1 = '';
			peg$savedPos = s0;
			s1 = peg$f1();
			s0 = s1;
		}

		return s0;
	}

	function peg$parseDouble() {
		let s0, s1, s2, s3;

		s0 = peg$currPos;
		s1 = peg$currPos;
		s2 = [];
		s3 = peg$parseZero();
		while (s3 !== peg$FAILED) {
			s2.push(s3);
			if (s2.length >= 2) {
				s3 = peg$FAILED;
			} else {
				s3 = peg$parseZero();
			}
		}
		if (s2.length < 2) {
			peg$currPos = s1;
			s1 = peg$FAILED;
		} else {
			s1 = s2;
		}
		if (s1 !== peg$FAILED) {
			peg$savedPos = s0;
			s1 = peg$f2(s1);
		}
		s0 = s1;
		if (s0 === peg$FAILED) {
			s0 = peg$currPos;
			s1 = peg$currPos;
			s2 = [];
			s3 = peg$parseOne();
			while (s3 !== peg$FAILED) {
				s2.push(s3);
				if (s2.length >= 2) {
					s3 = peg$FAILED;
				} else {
					s3 = peg$parseOne();
				}
			}
			if (s2.length < 2) {
				peg$currPos = s1;
				s1 = peg$FAILED;
			} else {
				s1 = s2;
			}
			if (s1 !== peg$FAILED) {
				peg$savedPos = s0;
				s1 = peg$f3(s1);
			}
			s0 = s1;
			if (s0 === peg$FAILED) {
				s0 = peg$currPos;
				s1 = peg$currPos;
				s2 = [];
				s3 = peg$parseTwo();
				while (s3 !== peg$FAILED) {
					s2.push(s3);
					if (s2.length >= 2) {
						s3 = peg$FAILED;
					} else {
						s3 = peg$parseTwo();
					}
				}
				if (s2.length < 2) {
					peg$currPos = s1;
					s1 = peg$FAILED;
				} else {
					s1 = s2;
				}
				if (s1 !== peg$FAILED) {
					peg$savedPos = s0;
					s1 = peg$f4(s1);
				}
				s0 = s1;
				if (s0 === peg$FAILED) {
					s0 = peg$currPos;
					s1 = peg$currPos;
					s2 = [];
					s3 = peg$parseThree();
					while (s3 !== peg$FAILED) {
						s2.push(s3);
						if (s2.length >= 2) {
							s3 = peg$FAILED;
						} else {
							s3 = peg$parseThree();
						}
					}
					if (s2.length < 2) {
						peg$currPos = s1;
						s1 = peg$FAILED;
					} else {
						s1 = s2;
					}
					if (s1 !== peg$FAILED) {
						peg$savedPos = s0;
						s1 = peg$f5(s1);
					}
					s0 = s1;
					if (s0 === peg$FAILED) {
						s0 = peg$currPos;
						s1 = peg$currPos;
						s2 = [];
						s3 = peg$parseFour();
						while (s3 !== peg$FAILED) {
							s2.push(s3);
							if (s2.length >= 2) {
								s3 = peg$FAILED;
							} else {
								s3 = peg$parseFour();
							}
						}
						if (s2.length < 2) {
							peg$currPos = s1;
							s1 = peg$FAILED;
						} else {
							s1 = s2;
						}
						if (s1 !== peg$FAILED) {
							peg$savedPos = s0;
							s1 = peg$f6(s1);
						}
						s0 = s1;
						if (s0 === peg$FAILED) {
							s0 = peg$currPos;
							s1 = peg$currPos;
							s2 = [];
							s3 = peg$parseFive();
							while (s3 !== peg$FAILED) {
								s2.push(s3);
								if (s2.length >= 2) {
									s3 = peg$FAILED;
								} else {
									s3 = peg$parseFive();
								}
							}
							if (s2.length < 2) {
								peg$currPos = s1;
								s1 = peg$FAILED;
							} else {
								s1 = s2;
							}
							if (s1 !== peg$FAILED) {
								peg$savedPos = s0;
								s1 = peg$f7(s1);
							}
							s0 = s1;
							if (s0 === peg$FAILED) {
								s0 = peg$currPos;
								s1 = peg$currPos;
								s2 = [];
								s3 = peg$parseSix();
								while (s3 !== peg$FAILED) {
									s2.push(s3);
									if (s2.length >= 2) {
										s3 = peg$FAILED;
									} else {
										s3 = peg$parseSix();
									}
								}
								if (s2.length < 2) {
									peg$currPos = s1;
									s1 = peg$FAILED;
								} else {
									s1 = s2;
								}
								if (s1 !== peg$FAILED) {
									peg$savedPos = s0;
									s1 = peg$f8(s1);
								}
								s0 = s1;
								if (s0 === peg$FAILED) {
									s0 = peg$currPos;
									s1 = peg$currPos;
									s2 = [];
									s3 = peg$parseSeven();
									while (s3 !== peg$FAILED) {
										s2.push(s3);
										if (s2.length >= 2) {
											s3 = peg$FAILED;
										} else {
											s3 = peg$parseSeven();
										}
									}
									if (s2.length < 2) {
										peg$currPos = s1;
										s1 = peg$FAILED;
									} else {
										s1 = s2;
									}
									if (s1 !== peg$FAILED) {
										peg$savedPos = s0;
										s1 = peg$f9(s1);
									}
									s0 = s1;
									if (s0 === peg$FAILED) {
										s0 = peg$currPos;
										s1 = peg$currPos;
										s2 = [];
										s3 = peg$parseEight();
										while (s3 !== peg$FAILED) {
											s2.push(s3);
											if (s2.length >= 2) {
												s3 = peg$FAILED;
											} else {
												s3 = peg$parseEight();
											}
										}
										if (s2.length < 2) {
											peg$currPos = s1;
											s1 = peg$FAILED;
										} else {
											s1 = s2;
										}
										if (s1 !== peg$FAILED) {
											peg$savedPos = s0;
											s1 = peg$f10(s1);
										}
										s0 = s1;
										if (s0 === peg$FAILED) {
											s0 = peg$currPos;
											s1 = peg$currPos;
											s2 = [];
											s3 = peg$parseNine();
											while (s3 !== peg$FAILED) {
												s2.push(s3);
												if (s2.length >= 2) {
													s3 = peg$FAILED;
												} else {
													s3 = peg$parseNine();
												}
											}
											if (s2.length < 2) {
												peg$currPos = s1;
												s1 = peg$FAILED;
											} else {
												s1 = s2;
											}
											if (s1 !== peg$FAILED) {
												peg$savedPos = s0;
												s1 = peg$f11(s1);
											}
											s0 = s1;
										}
									}
								}
							}
						}
					}
				}
			}
		}

		return s0;
	}

	function peg$parseNumbers() {
		let s0, s1, s2, s3, s4;

		s0 = peg$currPos;
		s1 = peg$parseDouble();
		if (s1 !== peg$FAILED) {
			s2 = peg$parseNumber();
			if (s2 === peg$FAILED) {
				s2 = null;
			}
			peg$savedPos = s0;
			s0 = peg$f12(s1, s2);
		} else {
			peg$currPos = s0;
			s0 = peg$FAILED;
		}
		if (s0 === peg$FAILED) {
			s0 = peg$currPos;
			s1 = peg$parseNumber();
			if (s1 !== peg$FAILED) {
				s2 = peg$currPos;
				s3 = [];
				s4 = peg$parseNumber();
				while (s4 !== peg$FAILED) {
					s3.push(s4);
					if (s3.length >= 2) {
						s4 = peg$FAILED;
					} else {
						s4 = peg$parseNumber();
					}
				}
				if (s3.length < 1) {
					peg$currPos = s2;
					s2 = peg$FAILED;
				} else {
					s2 = s3;
				}
				if (s2 !== peg$FAILED) {
					peg$savedPos = s0;
					s0 = peg$f13(s1, s2);
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		}

		return s0;
	}

	function peg$parseNumber() {
		let s0;

		s0 = input.charAt(peg$currPos);
		if (peg$r0.test(s0)) {
			peg$currPos++;
		} else {
			s0 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$e1);
			}
		}

		return s0;
	}

	function peg$parseZero() {
		let s0;

		if (input.charCodeAt(peg$currPos) === 48) {
			s0 = peg$c1;
			peg$currPos++;
		} else {
			s0 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$e2);
			}
		}

		return s0;
	}

	function peg$parseOne() {
		let s0;

		if (input.charCodeAt(peg$currPos) === 49) {
			s0 = peg$c2;
			peg$currPos++;
		} else {
			s0 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$e3);
			}
		}

		return s0;
	}

	function peg$parseTwo() {
		let s0;

		if (input.charCodeAt(peg$currPos) === 50) {
			s0 = peg$c3;
			peg$currPos++;
		} else {
			s0 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$e4);
			}
		}

		return s0;
	}

	function peg$parseThree() {
		let s0;

		if (input.charCodeAt(peg$currPos) === 51) {
			s0 = peg$c4;
			peg$currPos++;
		} else {
			s0 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$e5);
			}
		}

		return s0;
	}

	function peg$parseFour() {
		let s0;

		if (input.charCodeAt(peg$currPos) === 52) {
			s0 = peg$c5;
			peg$currPos++;
		} else {
			s0 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$e6);
			}
		}

		return s0;
	}

	function peg$parseFive() {
		let s0;

		if (input.charCodeAt(peg$currPos) === 53) {
			s0 = peg$c6;
			peg$currPos++;
		} else {
			s0 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$e7);
			}
		}

		return s0;
	}

	function peg$parseSix() {
		let s0;

		if (input.charCodeAt(peg$currPos) === 54) {
			s0 = peg$c7;
			peg$currPos++;
		} else {
			s0 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$e8);
			}
		}

		return s0;
	}

	function peg$parseSeven() {
		let s0;

		if (input.charCodeAt(peg$currPos) === 55) {
			s0 = peg$c8;
			peg$currPos++;
		} else {
			s0 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$e9);
			}
		}

		return s0;
	}

	function peg$parseEight() {
		let s0;

		if (input.charCodeAt(peg$currPos) === 56) {
			s0 = peg$c9;
			peg$currPos++;
		} else {
			s0 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$e10);
			}
		}

		return s0;
	}

	function peg$parseNine() {
		let s0;

		if (input.charCodeAt(peg$currPos) === 57) {
			s0 = peg$c10;
			peg$currPos++;
		} else {
			s0 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$e11);
			}
		}

		return s0;
	}

	peg$result = peg$startRuleFunction();

	const peg$success = peg$result !== peg$FAILED && peg$currPos === input.length;
	function peg$throw() {
		if (peg$result !== peg$FAILED && peg$currPos < input.length) {
			peg$fail(peg$endExpectation());
		}

		throw peg$buildStructuredError(
			peg$maxFailExpected,
			peg$maxFailPos < input.length ? peg$getUnicode(peg$maxFailPos) : null,
			peg$maxFailPos < input.length
				? peg$computeLocation(peg$maxFailPos, peg$maxFailPos + 1)
				: peg$computeLocation(peg$maxFailPos, peg$maxFailPos)
		);
	}
	if (options.peg$library) {
		return /** @type {any} */ ({
			peg$result,
			peg$currPos,
			peg$FAILED,
			peg$maxFailExpected,
			peg$maxFailPos,
			peg$success,
			peg$throw: peg$success ? undefined : peg$throw
		});
	}
	if (peg$success) {
		return peg$result;
	} else {
		peg$throw();
	}
}

const peg$allowedStartRules = ['start'];

export { peg$allowedStartRules as StartRules, peg$SyntaxError as SyntaxError, peg$parse as parse };
